--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                     <p>Sektördeki son gelişmeleri yakından takip eder ve personelimizi sürekli olarak eğitiriz. Bu sayede, müşterilerimize her zaman en güncel ve etkili çözümleri sunarız.</p>
                 </div>
                 <div class="service-image">
-                    <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Servis merkezi ekibi çalışırken">
+                    <img src="https://www.yetkiliservisbirimlistesi.com/images/yetkili.webp" alt="Servis merkezi ekibi çalışırken">
                 </div>
             </div>
         </div>
