--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
         <div class="container header-container">
             <div class="logo">
                 <i class="fas fa-tools"></i>
-                <div class="logo-text">Servis<span>Merkezi</span></div>
+                <div class="logo-text">Servis<span>Bayisi</span></div>
             </div>
             <a href="tel:02425043444" class="contact-header">
                 <i class="fas fa-phone-alt"></i>
